<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_line"
        android:icon="@drawable/action_line"
        android:orderInCategory="100"
        android:title="@string/action_line"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/action_twitter"
        android:orderInCategory="200"
        android:title="@string/action_twitter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/action_facebook"
        android:orderInCategory="300"
        android:title="@string/action_facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_other"
        android:orderInCategory="400"
        android:title="@string/action_other"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_browser"
        android:orderInCategory="500"
        android:title="@string/action_browser"
        app:showAsAction="never" />
</menu>